--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 		<div class="wrap-slick1">
 			<div class="slick1">
 
-				
+
 				<!-- <div class="item-slick1" style="background-image: url(images/slide-01.jpg);">
 					<div class="container h-full">
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
@@ -358,7 +358,7 @@
 					</div>
 				</div> -->
 
-				<div class="item-slick1" style="background-image: url(images/slide-02.jpg);">
+				<!-- <div class="item-slick1" style="background-image: url(images/slide-02.jpg);">
 					<div class="container h-full">
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
 							<div class="layer-slick1 animated visible-false" data-appear="rollIn" data-delay="0">
@@ -380,7 +380,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				<div class="item-slick1" style="background-image: url(images/slide-03.jpg);">
 					<div class="container h-full">
