--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
 							<div class="layer-slick1 animated visible-false" data-appear="rollIn" data-delay="0">
 								<span class="ltext-101 cl2 respon2">
-									Men New-Season
+									Welcome to innfit-365
 								</span>
 							</div>
 								
@@ -241,7 +241,7 @@
 					<!-- Block2 -->
 					<div class="block2">
 						<div class="block2-pic hov-img0">
-							<img src="images/product-03.jpg" alt="IMG-PRODUCT">
+							<img src="images/ash-6-poket-cargo/1.jpeg" alt="IMG-PRODUCT">
 
 							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1-for-6-poket-ash-cargo">
 								Quick View
@@ -619,66 +619,67 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 								<div class="slick3 gallery-lb">
 									<!-- Example images -->
-									<div class="item-slick3" data-thumb="images/product-detail-01.jpg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/1.jpeg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/product-detail-01.jpg" alt="IMG-PRODUCT">
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-01.jpg">
+											<img src="images/ash-6-poket-cargo/1.jpeg" alt="IMG-PRODUCT">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/1.jpeg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 2 -----  -->
-									<div class="item-slick3" data-thumb="images/product-detail-02.jpg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/2.jpeg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/product-detail-02.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-6-poket-cargo/2.jpeg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-02.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/2.jpeg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 3 -----  -->
-									<div class="item-slick3" data-thumb="images/product-detail-03.jpg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/3.jpeg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/product-detail-03.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-6-poket-cargo/3.jpeg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-03.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/3.jpeg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 4 -----  -->
-									<div class="item-slick3" data-thumb="images/product-13.jpg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/4.jpeg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/product-13.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-6-poket-cargo/4.jpeg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-13.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/4.jpeg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 5 -----  -->
-									<div class="item-slick3" data-thumb="images/product-14.jpg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/5.jpeg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/product-14.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-6-poket-cargo/5.jpeg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-03.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/5.jpeg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 6 -----  -->
-									<div class="item-slick3" data-thumb="images/product-15.jpg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/5.jpeg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/product-15.jpg" alt="IMG-PRODUCT">
-
+												<video width="100%" controls>
+												<source src="images/ash-6-poket-cargo/video.mp4" type="video/mp4">
+												</video>
 											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-15.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 7 -----  -->
-									<div class="item-slick3" data-thumb="images/product-16.jpg">
+									<!-- <div class="item-slick3" data-thumb="images/product-16.jpg">
 										<div class="wrap-pic-w pos-relative">
 											<img src="images/product-16.jpg" alt="IMG-PRODUCT">
 
@@ -686,8 +687,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
-									</div>
-									<!-- -----  image 8 -----  -->
+									</div> -->
+									<!-- -----  image 8 ----- 
 									<div class="item-slick3" data-thumb="images/product-17.jpg">
 										<div class="wrap-pic-w pos-relative">
 											<img src="images/product-12.jpg" alt="IMG-PRODUCT">
@@ -698,7 +699,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 										</div>
 									</div>
 									<!-- -----  image 9 -----  -->
-									<div class="item-slick3" data-thumb="images/product-17.jpg">
+									<!-- <div class="item-slick3" data-thumb="images/product-17.jpg">
 										<div class="wrap-pic-w pos-relative">
 											<img src="images/product-13.jpg" alt="IMG-PRODUCT">
 
@@ -706,17 +707,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
-									</div>
+									</div> -->
 									<!-- -----  image 10 -----  -->
-									<div class="item-slick3" data-thumb="images/product-17.jpg">
+									<!-- <div class="item-slick3" data-thumb="images/product-17.jpg">
 										<div class="wrap-pic-w pos-relative">
 											<img src="images/product-14.jpg" alt="IMG-PRODUCT">
 
 											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-14.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
-										</div>
-									</div>
+										</div> -->
+									<!-- </div> --> 
 									<!-- ----- image end ----  -->
 								</div>
 							</div>
