--- a/index.html
+++ b/index.html
@@ -668,12 +668,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 										</div>
 									</div>
 									<!-- -----  image 6 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/5.jpeg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/6.jpg">
 										<div class="wrap-pic-w pos-relative">
 												<video width="100%" controls>
 												<source src="images/ash-6-poket-cargo/video.mp4" type="video/mp4">
 												</video>
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-15.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/6.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
