--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					
 					<!-- Logo desktop -->		
 					<a href="#" class="logo">
-						<img src="images/icons/logo-01.png" alt="IMG-LOGO">
+						<img src="images/icons/update-logo.jpg" alt="IMG-LOGO">
 					</a>
 
 					<!-- Menu desktop -->
@@ -55,9 +55,9 @@
 							<li class="active-menu">
 								<a href="index.html">Home</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="about.html">About</a>
-							</li>
+							</li> -->
 						</ul>
 					</div>	
 				</nav>
@@ -67,7 +67,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+				<a href="index.html"><img src="images/icons/update-logo.jpg" alt="IMG-LOGO"></a>
 			</div>
 			<!-- Button show menu -->
 			<div class="btn-show-menu-mobile hamburger hamburger--squeeze">
@@ -89,9 +89,9 @@
 						<i class="fa fa-angle-right" aria-hidden="true"></i>
 					</span>
 				</li>
-				<li>
+				<!-- <li>
 					<a href="about.html">About</a>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 		
@@ -197,7 +197,7 @@
 					<!-- Block2 -->
 					<div class="block2">
 						<div class="block2-pic hov-img0">
-							<img src="images/blue-6-poket-cargo/1.jpg" alt="IMG-PRODUCT">
+							<img src="images/6-poket-blue/1.jpg" alt="IMG-PRODUCT">
 
 							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1-for-6-poket-blue-cargo">
 								Quick View
@@ -232,7 +232,7 @@
 					<!-- Block2 -->
 					<div class="block2">
 						<div class="block2-pic hov-img0">
-							<img src="images/ash-6-poket-cargo/1.jpeg" alt="IMG-PRODUCT">
+							<img src="images/ash-6-poket-cargo/1.jpg" alt="IMG-PRODUCT">
 
 							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1-for-6-poket-ash-cargo">
 								Quick View
@@ -423,41 +423,41 @@
 										</div>
 									</div>
 									<!-- -----  image 2 -----  -->
-									<div class="item-slick3" data-thumb="images/6-poket-blue/1.jpg">
+									<div class="item-slick3" data-thumb="images/6-poket-blue/2.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/6-poket-blue/1.jpg" alt="IMG-PRODUCT">
+											<img src="images/6-poket-blue/2.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/6-poket-blue/1.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/6-poket-blue/2.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 3 -----  -->
-									<div class="item-slick3" data-thumb="images/6-poket-blue/1.jpg">
+									<div class="item-slick3" data-thumb="images/6-poket-blue/3.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/6-poket-blue/1.jpg" alt="IMG-PRODUCT">
+											<img src="images/6-poket-blue/3.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/6-poket-blue/1.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/6-poket-blue/3.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 4 -----  -->
-									<div class="item-slick3" data-thumb="images/6-poket-blue/1.jpg">
+									<div class="item-slick3" data-thumb="images/6-poket-blue/4.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/6-poket-blue/1.jpg" alt="IMG-PRODUCT">
+											<img src="images/6-poket-blue/4.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/6-poket-blue/1.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/6-poket-blue/4.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 5 -----  -->
-									<div class="item-slick3" data-thumb="images/6-poket-blue/1.jpg">
+									<div class="item-slick3" data-thumb="images/6-poket-blue/5.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/6-poket-blue/1.jpg" alt="IMG-PRODUCT">
+											<img src="images/6-poket-blue/5.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/6-poket-blue/1.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/6-poket-blue/5.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
@@ -466,7 +466,7 @@
 									<div class="item-slick3" data-thumb="images/video-con.jpg">
 										<div class="wrap-pic-w pos-relative">
 												<video width="100%" controls>
-												<source src="images/ash-6-poket-cargo/video.mp4" type="video/mp4">
+												<source src="images/6-poket-blue/video.mp4" type="video/mp4">
 												</video>
 											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/video-con.jpg">
 												<i class="fa fa-expand"></i>
@@ -557,50 +557,50 @@
 
 								<div class="slick3 gallery-lb">
 									<!-- Example images -->
-									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/1.jpeg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/1.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-6-poket-cargo/1.jpeg" alt="IMG-PRODUCT">
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/1.jpeg">
+											<img src="images/ash-6-poket-cargo/1.jpg" alt="IMG-PRODUCT">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/1.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 2 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/2.jpeg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/2.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-6-poket-cargo/2.jpeg" alt="IMG-PRODUCT">
+											<img src="images/ash-6-poket-cargo/2.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/2.jpeg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/2.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 3 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/3.jpeg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/3.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-6-poket-cargo/3.jpeg" alt="IMG-PRODUCT">
+											<img src="images/ash-6-poket-cargo/3.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/3.jpeg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/3.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 4 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/4.jpeg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/4.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-6-poket-cargo/4.jpeg" alt="IMG-PRODUCT">
+											<img src="images/ash-6-poket-cargo/4.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/4.jpeg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/4.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 5 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/5.jpeg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/5.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-6-poket-cargo/5.jpeg" alt="IMG-PRODUCT">
+											<img src="images/ash-6-poket-cargo/5.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/5.jpeg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/5.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
@@ -712,41 +712,41 @@
 										</div>
 									</div>
 									<!-- -----  image 2 -----  -->
-									<div class="item-slick3" data-thumb="images/biscute-twill/1.jpg">
+									<div class="item-slick3" data-thumb="images/biscute-twill/2.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/biscute-twill/1.jpg" alt="IMG-PRODUCT">
+											<img src="images/biscute-twill/2.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/biscute-twill/1.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/biscute-twill/2.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 3 -----  -->
-									<div class="item-slick3" data-thumb="images/biscute-twill/1.jpg">
+									<div class="item-slick3" data-thumb="images/biscute-twill/3.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/biscute-twill/1.jpg" alt="IMG-PRODUCT">
+											<img src="images/biscute-twill/3.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/biscute-twill/1.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/biscute-twill/3.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 4 -----  -->
-									<div class="item-slick3" data-thumb="images/biscute-twill/1.jpg">
+									<div class="item-slick3" data-thumb="images/biscute-twill/4.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/biscute-twill/1.jpg" alt="IMG-PRODUCT">
+											<img src="images/biscute-twill/4.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/biscute-twill/1.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/biscute-twill/4.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 5 -----  -->
-									<div class="item-slick3" data-thumb="images/biscute-twill/1.jpg">
+									<div class="item-slick3" data-thumb="images/biscute-twill/5.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/biscute-twill/1.jpg" alt="IMG-PRODUCT">
+											<img src="images/biscute-twill/5.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/biscute-twill/1.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/biscute-twill/5.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
@@ -856,41 +856,41 @@
 										</div>
 									</div>
 									<!-- -----  image 2 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-twill/1.jpg">
+									<div class="item-slick3" data-thumb="images/ash-twill/2.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-twill/1.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-twill/2.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/1.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/2.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 3 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-twill/1.jpg">
+									<div class="item-slick3" data-thumb="images/ash-twill/3.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-twill/1.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-twill/3.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/1.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/3.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 4 -----  -->
-									<div class="item-slick3" data-thumb="images/product-13.jpg">
+									<div class="item-slick3" data-thumb="images/ash-twill/4.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/product-13.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-twill/4.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-13.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/4.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 5 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-twill/1.jpg">
+									<div class="item-slick3" data-thumb="images/ash-twill/5.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-twill/1.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-twill/5.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/1.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/5.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
