--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					
 					<!-- Logo desktop -->		
 					<a href="#" class="logo">
-						<img src="images/icons/update-logo.jpg" alt="IMG-LOGO">
+						<img src="images/update-logo.jpg" alt="IMG-LOGO">
 					</a>
 
 					<!-- Menu desktop -->
@@ -67,7 +67,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="images/icons/update-logo.jpg" alt="IMG-LOGO"></a>
+				<a href="index.html"><img src="images/update-logo.jpg" alt="IMG-LOGO"></a>
 			</div>
 			<!-- Button show menu -->
 			<div class="btn-show-menu-mobile hamburger hamburger--squeeze">
@@ -211,7 +211,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<strong style="color:#490006;">৳ 7,49 </strong>
+									<strong style="color:#000000;">৳ 7,49 </strong>
 								</span>
 							</div>
 
@@ -246,7 +246,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<strong style="color:#490006;">৳ 7,99 </strong>
+									<strong style="color:#000000;">৳ 7,99 </strong>
 								</span>
 							</div>
 
@@ -280,7 +280,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<strong style="color:#490006;">৳ 7,99 </strong>
+									<strong style="color:#000000;">৳ 7,99 </strong>
 								</span>
 							</div>
 
@@ -300,7 +300,7 @@
 					<!-- Block2 -->
 					<div class="block2">
 						<div class="block2-pic hov-img0">
-							<img src="images/ash-twill/1.jpg" alt="IMG-PRODUCT">
+							<img src="images/ash-twill-pant/1.jpg" alt="IMG-PRODUCT">
 
 							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1-for-twill-ash">
 								Quick View
@@ -314,7 +314,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<strong style="color:#490006;">৳ 7,99 </strong>
+									<strong style="color:#000000;">৳ 7,99 </strong>
 								</span>
 							</div>
 
@@ -373,7 +373,7 @@
 			<div class="p-t-40">
 				<p class="stext-107 cl6 txt-center">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://innfit-365.vercel.app/" target="_blank">INNFIT-365</a>
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				</p>
 			</div>
@@ -453,11 +453,11 @@
 										</div>
 									</div>
 									<!-- -----  image 5 -----  -->
-									<div class="item-slick3" data-thumb="images/6-poket-blue/5.jpg">
+									<div class="item-slick3" data-thumb="images/6-poket-blue/5.png">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/6-poket-blue/5.jpg" alt="IMG-PRODUCT">
+											<img src="images/6-poket-blue/5.png" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/6-poket-blue/5.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/6-poket-blue/5.png">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
@@ -466,7 +466,7 @@
 									<div class="item-slick3" data-thumb="images/video-con.jpg">
 										<div class="wrap-pic-w pos-relative">
 												<video width="100%" controls>
-												<source src="images/6-poket-blue/video.mp4" type="video/mp4">
+												<source src="images/6-poket-blue/video.MP4" type="video/mp4">
 												</video>
 											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/video-con.jpg">
 												<i class="fa fa-expand"></i>
@@ -485,7 +485,7 @@
 								<strong style="color: black;">Blue 6 Poket Cargo Pants</strong>
 							</h6>
 							<span class="mtext-106 cl2">
-								 <p>Price: <strong style="color:#490006;">৳ 7,49 </strong></p>
+								 <p>Price: <strong style="color:#000000;">৳ 7,49 </strong></p>
 							</span>
 							<p class="stext-102 cl3 p-t-23">
 								🧵 <strong>পণ্যের বিবরণ:</strong>  
@@ -596,11 +596,11 @@
 										</div>
 									</div>
 									<!-- -----  image 5 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/5.jpg">
+									<div class="item-slick3" data-thumb="images/ash-6-poket-cargo/5.png">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-6-poket-cargo/5.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-6-poket-cargo/5.png" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/5.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-6-poket-cargo/5.png">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
@@ -609,7 +609,7 @@
 									<div class="item-slick3" data-thumb="images/video-con.jpg">
 										<div class="wrap-pic-w pos-relative">
 												<video width="100%" controls>
-												<source src="images/ash-6-poket-cargo/video.mp4" type="video/mp4">
+												<source src="images/ash-6-poket-cargo/video.MP4" type="video/mp4">
 												</video>
 											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/video-con.jpg">
 												<i class="fa fa-expand"></i>
@@ -742,11 +742,11 @@
 										</div>
 									</div>
 									<!-- -----  image 5 -----  -->
-									<div class="item-slick3" data-thumb="images/biscute-twill/5.jpg">
+									<div class="item-slick3" data-thumb="images/biscute-twill/5.png">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/biscute-twill/5.jpg" alt="IMG-PRODUCT">
+											<img src="images/biscute-twill/5.png" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/biscute-twill/5.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/biscute-twill/5.png">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
@@ -755,7 +755,7 @@
 									<div class="item-slick3" data-thumb="images/video-con.jpg">
 										<div class="wrap-pic-w pos-relative">
 												<video width="100%" controls>
-												<source src="images/biscute-twill/video.mp4" type="video/mp4">
+												<source src="images/biscute-twill/video.MP4" type="video/mp4">
 												</video>
 											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/video-con.jpg">
 												<i class="fa fa-expand"></i>
@@ -847,50 +847,50 @@
 
 								<div class="slick3 gallery-lb">
 									<!-- Example images -->
-									<div class="item-slick3" data-thumb="images/ash-twill/1.jpg">
+									<div class="item-slick3" data-thumb="images/ash-twill-pant/1.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-twill/1.jpg" alt="IMG-PRODUCT">
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/1.jpg">
+											<img src="images/ash-twill-pant/1.jpg" alt="IMG-PRODUCT">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill-pant/1.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 2 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-twill/2.jpg">
+									<div class="item-slick3" data-thumb="images/ash-twill-pant/2.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-twill/2.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-twill-pant/2.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/2.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill-pant/2.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 3 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-twill/3.jpg">
+									<div class="item-slick3" data-thumb="images/ash-twill-pant/3.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-twill/3.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-twill-pant/1.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/3.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill-pant/3.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 4 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-twill/4.jpg">
+									<div class="item-slick3" data-thumb="images/ash-twill-pant/4.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-twill/4.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-twill-pant/4.jpg" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/4.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill-pant/4.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 									<!-- -----  image 5 -----  -->
-									<div class="item-slick3" data-thumb="images/ash-twill/5.jpg">
+									<div class="item-slick3" data-thumb="images/ash-twill-pant/5.png">
 										<div class="wrap-pic-w pos-relative">
-											<img src="images/ash-twill/5.jpg" alt="IMG-PRODUCT">
+											<img src="images/ash-twill-pant/5.png" alt="IMG-PRODUCT">
 
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill/5.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/ash-twill-pant/5.png">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
@@ -899,7 +899,7 @@
 									<div class="item-slick3" data-thumb="images/video-con.jpg">
 										<div class="wrap-pic-w pos-relative">
 												<video width="100%" controls>
-												<source src="images/ash-twill/video.mp4" type="video/mp4">
+												<source src="images/ash-twill-pant/video.MP4" type="video/mp4">
 												</video>
 											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/video-con.jpg">
 												<i class="fa fa-expand"></i>
