resize image and video

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 			<div class="p-t-40">
 				<p class="stext-107 cl6 txt-center">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://innfit-365.vercel.app/" target="_blank">INNFIT-365</a>
+						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <a href="https://innfit-365.vercel.app/" target="_blank">INNFIT-365</a>
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				</p>
 			</div>
@@ -466,7 +466,7 @@
 									<div class="item-slick3" data-thumb="images/video-con.jpg">
 										<div class="wrap-pic-w pos-relative">
 												<video width="100%" controls>
-												<source src="images/6-poket-blue/video.MP4" type="video/mp4">
+												<source src="images/6-poket-blue/video.mp4" type="video/mp4">
 												</video>
 											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/video-con.jpg">
 												<i class="fa fa-expand"></i>
@@ -609,7 +609,7 @@
 									<div class="item-slick3" data-thumb="images/video-con.jpg">
 										<div class="wrap-pic-w pos-relative">
 												<video width="100%" controls>
-												<source src="images/ash-6-poket-cargo/video.MP4" type="video/mp4">
+												<source src="images/ash-6-poket-cargo/video.mp4" type="video/mp4">
 												</video>
 											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/video-con.jpg">
 												<i class="fa fa-expand"></i>
@@ -755,7 +755,7 @@
 									<div class="item-slick3" data-thumb="images/video-con.jpg">
 										<div class="wrap-pic-w pos-relative">
 												<video width="100%" controls>
-												<source src="images/biscute-twill/video.MP4" type="video/mp4">
+												<source src="images/biscute-twill/video.mp4" type="video/mp4">
 												</video>
 											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/video-con.jpg">
 												<i class="fa fa-expand"></i>
@@ -899,7 +899,7 @@
 									<div class="item-slick3" data-thumb="images/video-con.jpg">
 										<div class="wrap-pic-w pos-relative">
 												<video width="100%" controls>
-												<source src="images/ash-twill-pant/video.MP4" type="video/mp4">
+												<source src="images/ash-twill-pant/video.mp4" type="video/mp4">
 												</video>
 											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/video-con.jpg">
 												<i class="fa fa-expand"></i>
